@@ -179,8 +179,20 @@ define( function( require ) {
         color = this.water.color;
       }
       else {
-        color = Color.interpolateRBGA( this.soluteProperty.get().dilutedColor, this.soluteProperty.get().color,
-          this.soluteVolumeProperty.get() / this.volumeProperty.get() );
+        var solute = this.soluteProperty.get();
+        var ratio = this.soluteVolumeProperty.get() / this.volumeProperty.get();
+        if ( solute.midpointColor ) {
+          // solute has an optional midpoint color
+          if ( ratio > 0.5 ) {
+            color = Color.interpolateRBGA( solute.midpointColor, solute.color, ( 2 * ratio ) - 1 );
+          }
+          else {
+            color = Color.interpolateRBGA( solute.dilutedColor, solute.midpointColor, ( 2 * ratio ) );
+          }
+        }
+        else {
+          color = Color.interpolateRBGA( solute.dilutedColor, solute.color, ratio );
+        }
       }
       return color;
     },
