@@ -1,3 +1,4 @@
+12/9/13 add optional midpoint color for some solutions, rewrite algorithm for computing solution color
 12/9/13 Basics: decrease length of drain pipe, move beaker slightly to the right
 12/9/13 Basics: adjust pH meter wire control points so that the wire looks good when measuring the drain
 12/9/13 Basics: make beaker slightly narrower so that drain faucet plunger isn't being dragged right up to edge of screen
